Changelog
=========

1.0b4 - unreleased
------------------

* Make "Replace existing theme" checkbox default to off.
  [elro]

* Fix control panel to correctly display a newly uploaded theme.
  [elro]

* Fix zip import to work correctly when no manifest is supplied.
  [elro]

1.0b3 - 2011-05-23
------------------

* Show theme name along with title in control panel.
  [elro]

1.0b2 - 2011-05-16
------------------

* Encode internally resolved documents to support non-ascii characters
  correctly.
  [elro]

* Fix control panel to use theme name not id.
  [optilude]

1.0b1 - 2011-04-22
------------------

* Wrap internal subrequests for css or js in style or script tags to
  facilitate inline includes.
  [elro]

* Add ``theme.xml`` import step (see README).
  [optilude]

* Add support for ``[theme:parameters]`` section in ``manifest.cfg``, which
  can be used to set parameters and the corresponding TALES expressions to
  calculate them.
  [optilude]

* Add support for parameter expressions based on TALES expressions
  [optilude]

* Use plone.subrequest 1.6 features to work with IStreamIterator from
  plone.resource.
  [elro]

* Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

* Added support for uploading themes as Zip archives.
  [optilude]

* Added theme off switch: Add a query string parameter ``diazo.off=1`` to a
  request whilst Zope is in development mode to turn off the theme.
  [optilude]

* Removed 'theme' and alternative themes support: Themes should be referenced
  using the ``<theme />`` directive in the Diazo rules file.
  [optilude]

* Removed 'domains' support: This can be handled with the rules file syntax
  by using the ``host`` parameter.
  [optilude]
  
* Removed 'notheme' support: This can be handled within the rules file syntax
  by using the ``path`` parameter.
  [optilude]
  
* Added ``path`` and ``host`` as parameters to the Diazo rules file. These
  can now be used as conditional expressions.
  [optilude]
  