@@ -11,16 +11,8 @@ class Theming(PloneSandboxLayer):
 
     def setUpZope(self, app, configurationContext):
         # load ZCML
-        import plone.app.theming
-        xmlconfig.file('configure.zcml', plone.app.theming, context=configurationContext)
-        
-        # Also register a test static resources directory
-        xmlconfig.string("""\
-<configure package="plone.app.theming.tests"
-    xmlns:plone="http://namespaces.plone.org/plone">
-    <plone:static directory="resources" type="theme" />
-</configure>
-""", context=configurationContext)
+        import plone.app.theming.tests
+        xmlconfig.file('configure.zcml', plone.app.theming.tests, context=configurationContext)
 
     def setUpPloneSite(self, portal):
         # install into the Plone site
